# -personal_file_protector

./: CMakeLists.txt
common/common_include/: common_classes.h  crypto_adaptor.cpp  crypto_adaptor.h
common/properties/: crypt_tests.yaml
common/res/: qscmd.conf
common/res/default/: templete
common/temlpate/lib_template_with_main/: CMakeLists.txt  test_func.cpp  test_func.h
common/temlpate/lib_template_with_main/main/: main.cpp
common/temlpate/new1/temp/: CMakeLists.txt  hash_adaptor.cpp  hash_adaptor.hpp
common/temlpate/new1/temp/main/: main.cpp
common/temlpate/new1/template_main/: CMakeLists.txt  main.cpp
common/temlpate/new_template_cygwin/lib_template_with_main/: CMakeLists.txt
common/temlpate/new_template_cygwin/template_main/: CMakeLists.txt
common/temlpate/noUse/: file_model.cpp  file_model.h
common/temlpate/temp_lib/: CMakeLists.txt  get_usr_passwd.cpp  get_usr_passwd.h
common/temlpate/temp_lib/main/: main.cpp
common/temlpate/template_main/: CMakeLists.txt
common/temlpate/template_main_with_in_lib/: CMakeLists.txt  main.cpp
document/: 28415a8e-b1fb-479a-9762-116892dc61ac.doc  个人文件加密系统毕业论文.docx  个人文件加密系统毕业论文v2.docx  开题报告-张涛-2015302580343.doc  新建文本文档.txt  武汉大学本科生毕业论文（设计）开题报告（学生填报） (1).doc
document/checklist/: 4.12.22.txt
document/flow/: 绘图1.vsdx  绘图6.vsdx
document/work/个人文件加密系统毕业论文-论文改重/: report.json  个人文件加密系统毕业论文-论文改重.docx
document/知网/: CNKI-636820448454550000.doc  DES加密算法分析与实现_张洁.caj  MD5算法研究_张裔智.caj  RSA算法应用及实现细节_陈传波.caj  个人文件的安全策略与设计_李振军.caj  信息安全中的DES加密算法_李联.caj  基于DSA及RSA的证实数字签名方案_王尚平.caj  多级密钥管理中主密钥的安全保护_曹来成.caj  密码算法的现状和发展研究_秦志光.caj  新建文本文档.txt
document/论文/: 个人文件加密系统毕业论文v4.docx  创意黑板风格毕业论文答辩ppt模板.pptx  目录.docx
gui/personal_file_gui_qt/: controller.cpp  controller.h  filelist.cpp  filelist.h  filemodel.cpp  filemodel.h  main.cpp  main.qml  personal_file_gui_qt.pro  pip_common_win.cpp  pip_common_win.hpp  protocol_adaptor.hpp  qml.qrc
src/change_rodata/: CMakeLists.txt  change_rodata.cpp  change_rodata.h
src/change_rodata/test_main/: main.cpp
src/crypto_adaptor/: AES_adaptor.cpp  AES_adaptor.h  AES_func_adaptor.cpp  AES_func_adaptor.h  CMakeLists.txt  adaptor_base.h  base64_adaptor.cpp  base64_adaptor.h  hash_adaptor.cpp  hash_adaptor.h  test.hpp  work_mode.h
src/crypto_adaptor/test_main/: init_tests_yaml.cpp  init_tests_yaml.h  main.cpp  tests.cpp
src/file_controller/: CMakeLists.txt  file_controller.cpp  file_controller.h  file_controller_adaptor.cpp  file_controller_adaptor.h
src/file_controller/main/: main.cpp
src/main_controller/: CMakeLists.txt  main_controller.cpp  main_controller.h  pip_common_win.hpp  protocol_adaptor.hpp
src/main_controller/main/: cli_win.cpp  main.cpp  main_unix.hpp  main_win.hpp
src/main_passwd/: CMakeLists.txt  main_passwd.cpp  main_passwd.h
src/passwd_adaptor/: CMakeLists.txt  file_key_controller.cpp  file_key_controller.h  get_usr_passwd.cpp  get_usr_passwd.h
src/passwd_adaptor/main/: main.cpp
src/web_adaptor/: CMakeLists.txt  ftpsession.c  ftpsession.h  httpsession.c  qscmd.hpp  web_adaptor.cpp  web_adaptor.h
src/web_adaptor/main/: main.cpp
